--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,10 @@
     <dimen name="medium_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
 
+    <dimen name="extra_large_space">32dp</dimen>
     <dimen name="large_space">24dp</dimen>
     <dimen name="medium_space">16dp</dimen>
     <dimen name="small_space">8dp</dimen>
+
+    <dimen name="people_avatar_size">140dp</dimen>
 </resources>
