--- a/app/src/main/res/layout/activity_add_people.xml
+++ b/app/src/main/res/layout/activity_add_people.xml
@@ -14,27 +14,29 @@
             layout="@layout/layout_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:id="@+id/add_people_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/add_people_text_input_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/medium_space"
+                android:layout_marginBottom="@dimen/small_space"
                 android:layout_marginEnd="@dimen/medium_space"
                 android:layout_marginStart="@dimen/medium_space"
-                android:layout_marginTop="@dimen/extra_large_space">
+                android:layout_marginTop="@dimen/extra_large_space"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/add_people_edit_text"
@@ -43,7 +45,7 @@
                     android:hint="@string/add_people_hint"
                     android:imeOptions="actionSend"
                     android:inputType="text"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
             </com.google.android.material.textfield.TextInputLayout>
         </FrameLayout>
 
@@ -52,8 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/add_people_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
     </android.support.constraint.ConstraintLayout>
 
 
@@ -64,5 +65,5 @@
         android:layout_marginEnd="@dimen/medium_space"
         android:src="@drawable/ic_add"
         app:layout_anchor="@id/add_people_input_layout"
-        app:layout_anchorGravity="end"/>
+        app:layout_anchorGravity="end" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
