--- a/app/src/main/res/layout/item_people_card.xml
+++ b/app/src/main/res/layout/item_people_card.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/avatar"
@@ -11,6 +12,17 @@
         android:layout_height="@dimen/people_avatar_size"
         android:layout_gravity="center"
         android:layout_margin="@dimen/medium_space"
-        android:background="@drawable/bg_circle_avatar"
-        tools:text="Leon"/>
+        android:elevation="4dp"
+        android:translationZ="6dp"
+        tools:text="Leon" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/delete_button"
+        android:layout_width="@dimen/people_avatar_size"
+        android:layout_height="@dimen/people_avatar_size"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/medium_space"
+        android:background="@drawable/bg_circle_delete"
+        android:translationZ="6dp"
+        android:visibility="gone" />
 </FrameLayout>
